@@ -29,14 +29,21 @@ parallelExecution in Test := false
 
 fork := true
 
-javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:+CMSClassUnloadingEnabled", "-Djna.nosys=true")
+javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-Djna.nosys=true")
+
+Test / javaOptions ++= Seq(
+  "base/java.lang", "base/java.lang.invoke", "base/java.lang.reflect", "base/java.io", "base/java.net", "base/java.nio",
+  "base/java.util", "base/java.util.concurrent", "base/java.util.concurrent.atomic",
+  "base/sun.nio.ch", "base/sun.nio.cs", "base/sun.security.action",
+  "base/sun.util.calendar", "security.jgss/sun.security.krb5",
+  ).map("--add-opens=java." + _ + "=ALL-UNNAMED")
 
 val sparkVersion = settingKey[String]("Spark version")
 val sparkTestingVersion = settingKey[String]("Spark testing base version without Spark version part")
 
 // 2.4.5 is the highest version we have with the old spark-testing-base deps
 sparkVersion := System.getProperty("sparkVersion", "3.3.0")
-sparkTestingVersion := "1.3.0"
+sparkTestingVersion := "1.4.0"
 
 // additional libraries
 libraryDependencies ++= Seq(
